GH free repo announcement

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -103,9 +103,7 @@ Please make sure that you install the \textbf{RStudio IDE} too (download \href{h
 \vspace{-0.25cm}
 \subsubsection*{Git and GitHub Classroom}
 
-We will also make extensive use of the \textbf{git} version control system (download \href{https://git-scm.com/downloads}{here}\footnote{Windows users, please make sure that you download \href{https://gitforwindows.org/}{Git for Windows} since that will come with Git Bash, which you'll need elsewhere in the course. More information \href{http://happygitwithr.com/install-git.html\#install-git-windows}{here}.}). Once you have installed git, please create an account on \textbf{GitHub} (\href{https://github.com/join}{here})% and make sure to register as a student --- use your \textit{username}@uoregon.edu email account --- so that you get access to free private repos (see \href{https://education.github.com/discount_requests/new}{here})
-%% No longer required: https://blog.github.com/changelog/2019-01-08-pricing-changes/
-. Now is probably a good time to tell you that I am going to run the entire course through \href{https://classroom.github.com/}{GitHub Classroom}. You will receive an email invitation to the course repo with instructions in due time, but suffice it to say that this is how we'll submit assignments, provide feedback, receive grades, etc.
+We will also make extensive use of the \textbf{Git} version control system (download \href{https://git-scm.com/downloads}{here}\footnote{Windows users, please make sure that you download \href{https://gitforwindows.org/}{Git for Windows} since that will come with Git Bash, which you'll need elsewhere in the course. More information \href{http://happygitwithr.com/install-git.html\#install-git-windows}{here}.}). Once you have installed Git, please create an account on \textbf{GitHub} (\href{https://github.com/join}{here}) and register for an education discount to get unlimited private repos (\href{https://education.github.com/discount_requests/new}{here}).\footnote{GitHub recently \href{https://blog.github.com/changelog/2019-01-08-pricing-changes/}{announced} unlimited free private repos for everyone. However, you are limited to three collaborators per private repo, so the education discount still makes sense.} Now is probably a good time to tell you that I am going to run the entire course through \href{https://classroom.github.com/}{GitHub Classroom}. You will receive an email invitation to the course repo with instructions in due time, but suffice it to say that this is how we'll submit assignments, provide feedback, receive grades, etc.
 
 \vspace{-0.25cm}
 \subsubsection*{Other}
