Changed course title

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -58,7 +58,7 @@ anchorcolor = black]{hyperref}
 
 \begin{document}
 
-\title{Environmental economics and data science \\(EC 607)}
+\title{Data science for economists \\(EC 607)}
 \subtitle{\textsc{Winter 2019 syllabus}\vspace{-2ex}}
 \author{Grant R. McDermott\\ Dept. of Economics, University of Oregon}
 %\date{}  % Toggle commenting to test
@@ -80,7 +80,7 @@ anchorcolor = black]{hyperref}
 
 \section*{Course description}
 
-This seminar is targeted at economics PhD students and will introduce you to advanced methods in environmental economics and data science. While some material will likely overlap with your other quantitative and empirical methods courses, this is not just another econometrics course. Rather, my goal is bring you up to speed on the practical tools and techniques that I feel will most benefit your dissertation work and future research career. This includes many of the seemingly forgotten skills --- like where to find interesting data sets in the ``wild'' and how to actually clean them --- that are crucial to any successful scientific project, but are typically excluded from core econometrics and statistics classes. We will cover topics like version control and effective project management; programming; data acquisition (e.g. web-scraping), cleaning and visualization; GIS and remote sensing products; and tools for big data analysis (e.g. relational databases, cloud computation and machine learning). In short, we will cover things that I wish someone had taught me when I was starting out in graduate school. While the data sets and materials focus will predominantly link to environmental and natural resource issues (my own fields of specialisation), the tools and methods apply broadly. Students from other fields of specialisation are thus welcome to register.
+This seminar is targeted at economics PhD students and will introduce you to the modern data science toolkit. While some material will likely overlap with your other quantitative and empirical methods courses, this is not just another econometrics course. Rather, my goal is bring you up to speed on the practical tools and techniques that I feel will most benefit your dissertation work and future research career. This includes many of the seemingly forgotten skills --- like where to find interesting data sets in the ``wild'' and how to actually clean them --- that are crucial to any successful scientific project, but are typically excluded from core econometrics and statistics classes. We will cover topics like version control and effective project management; programming; data acquisition (e.g. web-scraping), cleaning and visualization; GIS and remote sensing products; and tools for big data analysis (e.g. relational databases, cloud computation and machine learning). In short, we will cover things that I wish someone had taught me when I was starting out in graduate school. While the data sets and materials focus will predominantly link to environmental and natural resource issues (my own fields of specialisation), the tools and methods apply broadly. Students from other fields of specialisation are thus welcome to register.
 
 \newpage
 
@@ -249,7 +249,7 @@ Since I'm running this course through GitHub Classroom, yes. But good for you! (
 I mostly followed \href{https://github.com/jfiksel/github-classroom-for-teachers}{this excellent tutorial} by Jacob Fiksel.
 
 \vspace{-0.25cm}
-\subsubsection*{Remind me again: What exactly does this course have to do with \textit{environmental} economics?}
+\subsubsection*{The UO course catalogue lists this class as an ``environmental economics'' seminar. Remind me again: What exactly does this course have to do with \textit{environmental} economics?}
 Good question. The truth is that this is really a data science tools course taught by an environmental economist. And the really truthful truth is that getting university approval for a new course --- with a different name --- is a bureaucratic nightmare, compared to just modifying an existing one off the shelf. Now, having said that, we \textit{will} be dealing with a lot of environmental datasets and topics. From energy and pollution data to fisheries to GIS and remote sensing products. These are the products and research themes that I am most familiar with and care most deeply about. The topics in this course are also genuinely representative of the tools that I use in my day-to-day research as an environmental economist. The good news that they are very easily adaptable to other fields.
 
 \end{document}
